# hwbrowserpresence

./: CMakeLists.txt  bridge.cpp  manifest-firefox.json  manifest.json  preview.html  script.js
.github/workflows/: build.yml  icon.yml
